# esp32-firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.4m.csv  partitions.8m.csv  sdkconfig.defaults  sdkconfig.defaults.lilygo_t_qt_pro  sdkconfig.defaults.m5stack_m5sticks3
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/api/: console.c  console.h  console_web_proxy.c  usb_net.c  usb_net.h  web_server.c  web_server.h  web_server_ble_scanner.c  web_server_ble_sim_trace.c  web_server_device_central.c  web_server_device_editor.c  web_server_device_sim.c  web_server_devices_list.c  web_server_filemanager.c  web_server_internal.h  web_server_relay.c  web_server_static.c  web_server_system.c  web_server_websocket.c  web_server_wifi_config.c  web_server_wslog.c  wifi.c  wifi.h
main/ble/: ble_bond.c  ble_bond.h  ble_central.h  ble_central_core.c  ble_discovery.h  ble_discovery_core.c  ble_discovery_gatt.c  ble_discovery_internal.h  ble_discovery_json.c  ble_discovery_read.c  ble_discovery_smp.c  ble_init.c  ble_init.h  ble_scan.c  ble_scan.h  ble_sim.h  ble_sim_core.c  ble_sim_gap.c  ble_sim_gatt.c  ble_sim_internal.h  ble_sim_smp.c  device_manifest.c  device_manifest.h  device_parser.c  device_parser.h
main/common/: storage.c  storage.h  utils.c  utils.h
main/graphics/: graphics.c  graphics.h  lvgl_core.c  lvgl_stub.c  lvgl_svg.c  lvgl_ui.c  websocket_gfx.c
main/html/: central.css  central_body.html  common.css  common.js  devices_body.html  editor.html  filemanager_body.html  footer.html  head.html  index.html  scan.css  sim.css  (+3 more)
(+34 files in other folders)
